--- a/src/index.vm
+++ b/src/index.vm
@@ -8,6 +8,14 @@
       href="https://www.wix.com/favicon.ico"
       rel="shortcut icon"
     />
+    <link
+      rel="stylesheet"
+      href="${clientTopology.staticsBaseUrl}app#if(!${debug}).min#{end}.css"
+    />
+    <link
+      href="https://static.parastorage.com/unpkg/wix-base-ui@3.1041.0/dist/style.css"
+      rel="stylesheet"
+    />
 
     <script src="https://${clientTopology.staticsDomain}/polyfill/v3/polyfill#if(!${debug}).min#{end}.js?features=default,es6,es7,es2017,es2018,es2019&flags=gated&unknown=polyfill"></script>
     <script src="https://${clientTopology.staticsDomain}/unpkg-semver/fedops-logger@5/fedops-logger.bundle.min.js"></script>
